--- a/KatlaSportNg/src/app/hive-management/lists/hive-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-list.component.html
@@ -18,7 +18,7 @@
                               <button type="button" class="btn btn-danger">Delete</button>
                             </div>
                             <div class="btn-group mr-2" role="group" aria-label="Restore group" *ngIf="hive.isDeleted" (click)="onRestore(hive.id)">
-                                  <button type="button" class="btn btn-danger">Restore</button>
+                                  <button type="button" class="btn btn-danger">Undelete</button>
                                 </div>
                             <div class="btn-group mr-2" role="group" aria-label="View group">
                               <button routerLink="/hive/{{hive.id}}/sections" type="button" class="btn btn-info">View sections</button>
